[package]
name = "fingerprinter-rs"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
hex-literal = "0.4.1"
jwalk = "0.8.1"
rayon = "1.10.0"
sha2 = "0.10.8"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

serde_json = "1.0.132"
serde = { version = "1.0.209", features = ["derive"] }
chrono = "0.4.38"

# https://stackoverflow.com/a/54842093
[profile.release]
opt-level =  'z' # Optimize for size.
lto = true
codegen-units=1
panic = 'abort'
strip = true # Strip symbols from binary
